src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: "DM Sans", sans-serif;
}

@layer base {
  body {
    @apply bg-gray-lightest;
  }
  .base-container {
    @apply bg-white container rounded mx-auto;
  }
  h2 {
    @apply font-bold text-gray;
  }

  h3 {
    @apply font-bold;
  }

  /* The intention here is to reuse the bg and responsive x padding classes */
  .dynamic-px {
    @apply px-4;
  }

  .orange-link {
    @apply text-orange underline font-bold;
  }
}

@layer components {
  .livestream-button {
    @apply rounded px-1em py-0.33em font-bold;
  }

  .fade-overlay-bg {
    background: linear-gradient(
      180deg,
      rgba(196, 196, 196, 0) 0%,
      rgba(0, 0, 0, 0.87) 100%
    );
  }
}

